--- a/public/client.html
+++ b/public/client.html
@@ -4,111 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <!--..<link rel="stylesheet" href="./style.css">-->
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #1abc9c;
-        }
-
-        h1.welcomeMsg {
-            position: relative;
-            text-align: center;
-        }
-
-        #username {
-            display: block;
-            width: 100px;
-            height: 30px;
-            margin: 10px auto;
-        }
-
-        #containerMsg {
-            width: 60%;
-            margin: 0 auto;
-            padding: 10;
-            background-color: #fff;
-            border-radius: 10px;
-        }
-
-        #messagesBox {
-            background-color: #fff;
-            height: 30em;
-            padding: 10px;
-            border-radius: 10px;
-            display: flex;
-            flex-flow: row wrap;
-            align-items: flex-end;
-            overflow-y: auto;
-        }
-
-        #sendMessage {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
-        }
-
-        #message {
-            margin: 0;
-            padding: 0 5px;
-            border: none;
-            border-bottom: 1px solid #57606f;
-            width: 100%;
-            height: 40px;
-            transition: 0.3s;
-        }
-
-        #message:active {
-            border-bottom: 1px solid #2f3542;
-            outline: 0;
-            outline-offset: 0;
-        }
-
-        #message:hover {
-            border-bottom: 1px solid #747d8c;
-            outline: 0;
-            outline-offset: 0;
-        } 
-
-        #message:focus {
-            border-bottom: 1px solid #2f3542;
-            outline: 0;
-            outline-offset: 0;
-        }
-
-        #sendBtn {
-            padding: 10px 0;
-            margin: 0;
-            width: 70px;
-            color: black;
-            text-decoration: none;
-            transition: 0.3s;
-            font-weight: 700;
-            border: none;
-        }
-
-        #sendBtn:hover { 
-            color: white;
-            background: #00b894; 
-            border: 2px;
-            border-color: black;
-            border-radius: 3px;
-        }
-
-        #sendBtn:active {
-            border: 2px;
-            border-color: black;
-            border-radius: 3px;
-            background-color: #079992;
-        }
-
-        #sendBtn:focus {
-            outline: 0;
-            outline-offset: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="./client.css">
 </head>
 <body>
     <h1 class="welcomeMsg">Welcome to my Chat! Input your username below and get started.</h1>
@@ -120,73 +16,6 @@
             <button id="sendBtn">Send!</button>
         </div>
     </div>>
-    <script>
-        const HOST = location.origin.replace(/^http/, 'ws')
-        console.log(location.origin);
-        const ws = new WebSocket(HOST);
-
-        let box = document.getElementById('messagesBox');
-
-        ws.onopen = function () {
-            console.log('Welcome!');
-            // sending a send event to websocket server
-            ws.send(JSON.stringify({
-                type: "message",
-                data: "User connected."
-            }));
-        }
-        // event emmited when receiving message 
-        ws.onmessage = function (event) {
-            console.log(event);
-            let msg = JSON.parse(event.data);
-
-            box.innerHTML += `${msg.username}: ${msg.data}<br>`;
-        }
-
-        ws.onerror = function (err) {
-            console.error(err);
-        }
-
-        ws.onclose = function () {
-            ws.send(JSON.stringify({
-                type: "message",
-                data: "User disconnected."
-            }));
-        }
-
-        function sendMessage() {
-            const username = document.getElementById('username').value;
-            const message = document.getElementById('message').value;
-            const messagesBox = document.getElementById('messagesBox');
-
-            if (message === '') return;
-
-            ws.send(JSON.stringify({
-                type: "username",
-                data: username
-            }));
-
-            if(username && message) {
-                ws.send(JSON.stringify({
-                    type: "message",
-                    data: message
-                }));
-
-                box.innerHTML += `You: ${message}<br>`;
-                document.getElementById('message').value = '';
-                messagesBox.scrollTop = messagesBox.scrollHeight;
-            } else if (message == '') {
-                return ;
-            } else {
-                alert('Input username');
-            }
-        }
-
-        document.getElementById('message').onkeydown = (key) => {
-            if (key.keyCode === 13 ) sendMessage();
-        }
-
-        document.getElementById('sendBtn').onclick = sendMessage;
-    </script>
+    <script src="client.js"></script>
 </body>
 </html>
