--- a/public/client.html
+++ b/public/client.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <link rel="stylesheet" href="./client.css">
+    <link rel="stylesheet" href="client.css">
 </head>
 <body>
     <h1 class="welcomeMsg">Welcome to my Chat! Input your username below and get started.</h1>
@@ -16,6 +16,6 @@
             <button id="sendBtn">Send!</button>
         </div>
     </div>>
-    <script src="client.js"></script>
+    <script type="text/javascript" src="client.js"></script>
 </body>
 </html>
