--- a/public/login.html
+++ b/public/login.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <!--<link rel="stylesheet" href="./style.css">-->
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h1>cyka!</h1>
-    <h2>cyka</h2>
-    <!--<script src="login.js"></script>-->
+    <div class="login-page">
+        <div class="form">
+            <form method="POST" class="register-form">
+                <input type="text" placeholder="username"/>
+                <input type="password" placeholder="password"/>
+                <input type="text" placeholder="email address"/>
+                <button>create</button>
+                <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+            <form method="POST" class="login-form">
+                <input type="text" placeholder="username"/>
+                <input type="password" placeholder="password"/>
+                <button>login</button>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
